--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -68,4 +68,20 @@ body {
 	border:1px solid #4C964D;
 	color:#FFF;
 }
-	
+
+
+
+
+/**
+ * Icons
+ */
+.icon > svg {
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  vertical-align: middle;
+}
+.icon > svg path {
+    fill: #828282;
+}
+
