--- a/_includes/themes/twitter/post.html
+++ b/_includes/themes/twitter/post.html
@@ -1,9 +1,11 @@
+<link href="{{ ASSET_PATH }}/css/post.css" rel="stylesheet">
+
 <div class="page-header">
-  <h1>{{ page.title }} <small>{{ page.tagline }}</small></h1>
+  <h1 class="page-title">{{ page.title }} <small>{{ page.tagline }}</small></h1>
 </div>
 
 <div class="row">
-  <div class="span10">
+  <div class="span10 page-content">
     {{ content }}
     <hr>
     <div class="pagination">
