--- a/_includes/themes/twitter/post.html
+++ b/_includes/themes/twitter/post.html
@@ -10,13 +10,13 @@
     <hr>
     <div class="pagination">
       <ul>
-      {% if page.previous %}
+      {% if page.previous and page.category == page.previous.category %}
         <li class="prev"><a href="{{ BASE_PATH }}{{ page.previous.url }}" title="{{ page.previous.title }}">&larr; Previous</a></li>
       {% else %}
         <li class="prev disabled"><a>&larr; Previous</a></li>
       {% endif %}
         <li><a href="{{ BASE_PATH }}{{ site.JB.archive_path }}">Archive</a></li>
-      {% if page.next %}
+      {% if page.next and page.category == page.next.category %}
         <li class="next"><a href="{{ BASE_PATH }}{{ page.next.url }}" title="{{ page.next.title }}">Next &rarr;</a></li>
       {% else %}
         <li class="next disabled"><a>Next &rarr;</a>
