--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -16,7 +16,7 @@
     <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
     <link href="{{ ASSET_PATH }}/css/syntax.css" rel="stylesheet">
 
-    <script src="http://code.jquery.com/jquery-1.5.2.min.js"></script>
+    <script src="{{ ASSET_PATH }}/js/jquery-1.5.2.min.js"></script>
     <script src="{{ ASSET_PATH }}/js/bootstrap-dropdown.js"></script>
 
     <!-- Le fav and touch icons -->
