--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -15,6 +15,7 @@
     <link href="{{ ASSET_PATH }}/css/1.4.0/bootstrap.css" rel="stylesheet">
     <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
     <link href="{{ ASSET_PATH }}/css/syntax.css" rel="stylesheet">
+    <link href="{{ ASSET_PATH }}/css/custom.css" rel="stylesheet">
 
     <script src="{{ ASSET_PATH }}/js/jquery-1.5.2.min.js"></script>
     <script src="{{ ASSET_PATH }}/js/bootstrap-dropdown.js"></script>
