--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,10 @@
 theme :
   name : twitter
 layout: default
+comments: true
 ---
 {% include JB/setup %}
 {% include themes/twitter/post.html %}
+{% if page.comments %}
+    {% include JB/comments-providers/disqus %}
+{% endif %}
